--- a/ChatFormatterPro/ChatFormatterPro.csproj
+++ b/ChatFormatterPro/ChatFormatterPro.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Markdig" Version="0.44.0" />
     <PackageReference Include="MigraDocCore.DocumentObjectModel" Version="1.3.67" />
     <PackageReference Include="PDFsharp-MigraDoc-GDI" Version="6.2.3" />
+    <PackageReference Include="QuestPDF" Version="2025.12.3" />
   </ItemGroup>
 
   <ItemGroup>
